# tx-rebate-checks

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
frontend/: eslint.config.mjs  next.config.mjs  package-lock.json  package.json  tsconfig.json  vercel.json
frontend/__tests__/: AggregateImpact.test.tsx  HouseholdInputs.test.tsx  PolicyOverview.test.tsx
frontend/app/: globals.css  layout.tsx  robots.ts  sitemap.ts
frontend/app/(shell)/: page.tsx
frontend/components/: AggregateImpact.tsx  CongressionalDistrictImpact.tsx  DynamicDistrictMap.tsx  Header.tsx  ImpactAnalysis.tsx  MapTypeToggle.tsx  PolicyOverview.tsx  USDistrictChoroplethMap.tsx
frontend/hooks/: useAggregateImpact.ts
frontend/lib/: api.ts  embedding.ts  rebate.ts  types.ts
frontend/public/data/: congressional_districts.csv  distributional_impact.csv  income_brackets.csv  metrics.csv  winners_losers.csv
scripts/: modal_district_pipeline.py  modal_pipeline.py  run_state_pipeline_detached.py
tests/: test_csv_data.py
tx_rebate_calc/: __init__.py  rebate.py
